k8s/overlays/test/deployment-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urca-tournament-api
spec:
  replicas: 1
