k8s/overlays/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urca-tournament
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: urca-tournament
          imagePullPolicy: Always
