k8s/overlays/test/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: urca-tournament
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - torneio-test.dmaxter.pt
  rules:
    - backendRefs:
        - name: urca-tournament-api
          port: 8000
      matches:
        - path:
            type: PathPrefix
            value: /api
    - backendRefs:
        - name: urca-tournament-web
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
